gatekeeper/templates/k8sblockhostnetwork-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
    name: k8sblockhostnetwork
    annotations:
        argocd.argoproj.io/sync-wave: "0"
spec:
    crd:
        spec:
            names:
                kind: K8sBlockHostNetwork
    targets:
        - target: admission.k8s.gatekeeper.sh
          rego: |
              package k8sblockhostnetwork

              violation[{"msg": msg}] {
                spec := pod_spec
                object.get(spec, "hostNetwork", false)
                msg := "hostNetwork must not be true"
              }

              pod_spec := input.review.object.spec {
                input.review.kind.kind == "Pod"
              }

              pod_spec := input.review.object.spec.template.spec {
                template_kinds[input.review.kind.kind]
              }

              pod_spec := input.review.object.spec.jobTemplate.spec.template.spec {
                input.review.kind.kind == "CronJob"
              }

              template_kinds := {
                "DaemonSet",
                "Deployment",
                "Job",
                "ReplicaSet",
                "Rollout",
                "StatefulSet",
              }
