gatekeeper/templates/k8sdisallowrootuser-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
    name: k8sdisallowrootuser
    annotations:
        argocd.argoproj.io/sync-wave: "0"
spec:
    crd:
        spec:
            names:
                kind: K8sDisallowRootUser
    targets:
        - target: admission.k8s.gatekeeper.sh
          rego: |
              package k8sdisallowrootuser

              violation[{"msg": msg}] {
                spec := pod_spec
                object.get(object.get(spec, "securityContext", {}), "runAsUser", -1) == 0
                msg := "pod securityContext.runAsUser must not be 0"
              }

              violation[{"msg": msg}] {
                container := input_containers[_]
                object.get(object.get(container, "securityContext", {}), "runAsUser", -1) == 0
                msg := sprintf("container %q must not set runAsUser to 0", [container.name])
              }

              input_containers[c] {
                spec := pod_spec
                c := spec.containers[_]
              }

              input_containers[c] {
                spec := pod_spec
                c := spec.initContainers[_]
              }

              pod_spec := input.review.object.spec {
                input.review.kind.kind == "Pod"
              }

              pod_spec := input.review.object.spec.template.spec {
                template_kinds[input.review.kind.kind]
              }

              pod_spec := input.review.object.spec.jobTemplate.spec.template.spec {
                input.review.kind.kind == "CronJob"
              }

              template_kinds := {
                "DaemonSet",
                "Deployment",
                "Job",
                "ReplicaSet",
                "Rollout",
                "StatefulSet",
              }
